# hf

./: .metadata  AUTHORS  Makefile.am  Makefile.in  NEWS  README  TODO  acconfig.h  aclocal.m4  config.h.in  configure  configure.ac  configure.in  freqdev.m  ggtest.m  golay.m  hf.spec  startkern.pl
dcf77/: Makefile.am  Makefile.in  audioin.c  audioout.c  calccorr.c  dcf77.h  dcf77gen.1  dcf77gen.c  dcf77rx.1  dcf77rx.c  dcfdemod.c  dcfdemodpn.c  dcfmod.c  hbgdemod.c  hbgmod.c  mktables.c  timedec.c  timeenc.c  util.c  xgintf.c  xgintf.h
doc/: AUTHORS  ChangeLog  DE-HF-HOWTO.txt  HF-HOWTO.txt  INSTALL  LIESMICH  Makefile.am  Makefile.in  P-MB-list.txt  README  chan_formulas.ps  chan_formulas.tex  dcf77  dcf77.txt  english.txt  hfkernel.1  mt63.txt  pactor.ps  pactor.txt  pactor_statediag.fig
doc/hf-examplefiles/: Makefile  Makefile.am  Makefile.in  fix.01  fix.02  fix.03  fix.04  fix.05  fix.06  fix.07  fix.08  fix.09  fix.10  fix.11  fix.12  gag
doc/man/: Makefile.am  Makefile.in  dcf77gen.1  dcf77rx.1  hfkernel.1  hfterm.1
doc/man/de/: Makefile.am  Makefile.in  hfkernel.1  hfterm.1
hfkernel/: Makefile.am  Makefile.in  main.c  main.h  msg.c  msg.h
hfkernel/cw/: Makefile.am  Makefile.in  cw.c  cw.h  elbug.c
hfkernel/fsk/: Makefile.am  Makefile.in  amtor.c  amtor.h  fskinlines.h  fskl1.c  fskl1.h  fskutil.c  fskutil.h  gtor.c  gtor.h  mkgtortables.c  pactor.c  pactor.h  rtty.c  rtty.h  standby.c  standby.h
hfkernel/l1/: Makefile.am  Makefile.in  alsa.c  alsa.h  oss.c  oss.h  refclock.c
hfkernel/mt63/: Makefile.am  Makefile.in  addnoise.c  dsp.h  morsecod.c  mt63.cc  mt63.h  mt63hf.cc  mt63hf.h  mt63hflink.c  mt63hflink.h  mt63rx.cc  mt63trx.cc  mt63tx.cc  peakrms.c  ratecal1.cc  sound.cc  sound.h  stdinr.cc  stdinr.h  term.cc  term.h
hfterm/: Makefile.am  Makefile.in  acconfig.h  config.h.in  configure  configure.in  hfterm.glade
hfterm/src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  fixgui.c  gui.h  helpgui.c  hft.h  interface.c  interface.h  log.c  log.h  logcallbacks.c  loggui.c  mailbox.c  mailbox.h  main.c  maingui.c  mapgui.c  monigui.c  msg.c  params.c  pargui.c  rxtx.c  rxtx.h  specgui.c  spectrum.c  spectrum.h
hftermfl/: Makefile.am  Makefile.in  hft.h  hfterm.c  hfterm.fd  hfterm.h  main.c  msg.c
include/: hfapp.h  os.h
l1/: Makefile.am  Makefile.in  l1.h
l1/kdrv/: Makefile  gentbl.c  hfmodem.h  main.c  modem.c  refclock.c  sbc.c  wss.c
l1/kernel/: Makefile.am  Makefile.in  main.c
l1/user/: Makefile.am  Makefile.in  fsk.c  l1user.h  link.c  oss.c  refclock.c  util.h
os/: Makefile.am  Makefile.in  main.c  msg.c  os_linux.h  vsnprintf.c
proto/: Makefile.am  Makefile.in  amtor.c  gtor.c  gtor.h  mkgtortables.c  pactor.c  rtty.c  rtty.h  standby.c  standby.h  util.c  util.h
scripts/: Makefile.am  Makefile.in  calibrations  hf  hftcp  htmlup  ratetry  testtest
test/: Makefile.am  Makefile.in  alsafdx.c  alsalatency.c  alsatestmake  portecho.c  testcos.c  testgettimeofday.c  testoss.c  testpoly.c
util/: Makefile.am  Makefile.in  amtorsymsort.c  channel.c  chantab.c  filtbench.c  paccalc.c  pactorcrc.c  reffreq.c  testgaussgen.c
