## Process this file with automake to produce Makefile.in

## SUBDIRS = intl  src
SUBDIRS = src

## the following I, Gnther, outcommented, the worldmap pixmap was too big
## and the worldmap feature is deactivated
##install-data-local:
##	@$(NORMAL_INSTALL)
##	if test -d $(srcdir)/pixmaps; then \
##	  $(mkinstalldirs) $(DESTDIR)$(pkgdatadir)/pixmaps; \
##	  for pixmap in $(srcdir)/pixmaps/*; do \
##	    if test -f $$pixmap; then \
##	      $(INSTALL_DATA) $$pixmap $(DESTDIR)$(pkgdatadir)/pixmaps; \
##	    fi \
##	  done \
##	fi

## the following was already outcommented by Tom I think
##dist-hook:
##	if test -d pixmaps; then \
##	  mkdir $(distdir)/pixmaps; \
##	  for pixmap in pixmaps/*; do \
##	    if test -f $$pixmap; then \
##	      cp -p $$pixmap $(distdir)/pixmaps; \
##	    fi \
##	  done \
##	fi

